--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -266,17 +266,17 @@ en:
           page_title: Contact details confidentiality
           heading: "Keeping %{name}'s contact details private"
           lead_text_html: |
-            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include %{name}'s contact details.</p>
-            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep %{name}'s contact details private.</p>
+            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include your contact details.</p>
+            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep your contact details private.</p>
             <p class="govuk-body"><strong>Please note:</strong> you will need to make sure that any form or document, either completed by you now, or at a later date, for use in court <strong>does not</strong> contain the information you wish to keep private. This includes documents received from other people e.g. medical reports or financial statements etc.</p>
-            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of %{name}'s contact details.</p>
+            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of your contact details.</p>
       privacy_summary:
         show:
           page_title: Contact details confidentiality
           heading: "The court will keep %{name}'s contact details private"
           heading_not_private: "The court will not keep %{name}'s contact details private"
           body_text_html: <p class="govuk-body">You have told us you want to keep these contact details private</p>
-          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of %{name}'s contact details, or you do not want to keep %{name}'s contact details private from the other people named in this application (the respondents).</p>
+          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of your contact details, or you do not want to keep your contact details private from the other people named in this application (the respondents).</p>
           second_text_html: |
             <h2 class="govuk-heading-m">What the court will do</h2>
             <p class="govuk-body">The court will hold this information securely and it will not be shared with any other party except Cafcass (Children and Family Court Advisory and Support Service) or Cafcass CYMRU unless it is by order of the court.</p>
@@ -1455,8 +1455,8 @@ en:
         contact_details_private_options:
           address: Current address
           email: Email address
-          mobile: Home phone number
-          home_phone: Mobile phone number
+          mobile: Mobile phone number
+          home_phone: Home phone number
       steps_applicant_personal_details_form:
         <<: *PERSONAL_DETAILS_FIELDS
         previous_name: Enter your previous name
