--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -259,12 +259,12 @@ en:
       privacy_known:
         edit:
           page_title: Contact details confidentiality
-          heading: "Keeping %{name}'s contact details private"
+          heading: "Keeping your contact details private"
           privacy_known: Do the other people named in this application (the respondents) know any of your contact details?
       privacy_preferences:
         edit:
           page_title: Contact details confidentiality
-          heading: "Keeping %{name}'s contact details private"
+          heading: "Keeping your contact details private"
           hint: You've stated that the respondents know some of your contact details. Make sure you select the contact details the applicants do not already know.
           lead_text_html: |
             <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include your contact details.</p>
@@ -274,8 +274,8 @@ en:
       privacy_summary:
         show:
           page_title: Contact details confidentiality
-          heading: "The court will keep %{name}'s contact details private"
-          heading_not_private: "The court will not keep %{name}'s contact details private"
+          heading: "The court will keep your contact details private"
+          heading_not_private: "The court will not keep your contact details private"
           body_text_html: <p class="govuk-body">You have told us you want to keep these contact details private</p>
           body_text_not_private_html: <p class="govuk-body">You have told us that either the other people named in this application do not know any of your contact details, or you do not want to keep your contact details private from the other people named in this application (the respondents).</p>
           second_text_html: |
