--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -31,6 +31,7 @@ en:
         invalid: Date of birth is not valid
         future: Date of birth must be in the past
       dob_estimate:
+        blank: Enter the date of birth
         invalid: Approximate date of birth is not valid
         future: Approximate date of birth must be in the past
       gender:
