--- a/config/locales/exemptions/en.yml
+++ b/config/locales/exemptions/en.yml
@@ -69,9 +69,9 @@ en:
       without_notice: You’re applying for a without notice hearing
       ## GROUP MIAM ACCESS ##
       group_miam_access: You can’t access a mediator
-      no_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
-      no_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
-      no_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
+      miam_access_disabled_facilites: You or the other person has a disability and the mediator doesn’t have disabled facilities
+      miam_access_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
+      miam_access_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
       ## END GROUP ##
       access_prohibited: You or all of the prospective respondents can’t attend a MIAM because one of you is in prison or any other institution; subject to bail conditions that prevent contact with each other; or subject to a licence with a prohibited contact with each other
       non_resident: You or all of the prospective respondents are not habitually resident in England and Wales
@@ -143,13 +143,13 @@ en:
     MISC_EXEMPTIONS_HINTS: &MISC_EXEMPTIONS_HINTS
       without_notice: Hearings which take place without notice to the other people will only be justified where your case is exceptionally urgent or there is good reason not to tell the other people about your application (either because they could take steps to obstruct the application or because doing so may expose you or the children to a risk of harm)
       group_miam_access: For example you live further than 15 miles from a mediator, you are not able to get an appointment for a MIAM within 15 working days or you or the other people in this application (the respondents) have a disability and the mediator doesn’t have disabled facilities
-      no_disabled_facilities_html: |
+      miam_access_disabled_facilites_html: |
         You will need to provide:
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-!-margin-top-2">
           <li>evidence you’ve contacted 3 mediators who all state they don’t have disabled facilities</li>
           <li>names and contact details of the mediators, including dates of contact</li>
         </ul>
-      no_appointment_html: |
+      miam_access_appointment_html: |
         You will need to provide:
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-!-margin-top-2">
           <li>evidence you’ve contacted 3 mediators who all state they can’t offer an appointment within 15 days</li>
