add domestic abuse act to c100 PDF

--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -130,6 +130,7 @@ en:
       applicant_respondent: Applicant and respondent
       nature_of_application: Nature of application
       risk_concerns: Concerns about risk of harm
+      domestic_abuse_act: Domestic Abuse Act 2021
       additional_information: Additional information
       children_details: Summary of children’s details
       children_relationships: Children’s relationship with parties
