--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -341,6 +341,8 @@ en:
           attributes:
             orders:
               blank: Select what you’re asking the court to decide
+              missing_prohibited_step: Select the activities you wish to stop
+              missing_specific_issue: Select the specific issues you would like to have resolved
         steps/children/orders_form:
           attributes:
             orders:
