--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -128,6 +128,7 @@ en:
       processing_details: Processing details (for court use only)
       help_with_fees: Help with fees
       applicant_respondent: Applicant and respondent
+      domestic_abuse_act: Domestic Abuse Act 2021
       nature_of_application: Nature of application
       risk_concerns: Concerns about risk of harm
       additional_information: Additional information
