--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -276,50 +276,50 @@ en:
         da_service_isva: A letter from an independent sexual violence advisor confirming that they are providing support to a prospective party relating to sexual violence by another prospective party
         da_service_organisation: A letter from an organisation providing domestic violence support services, or a registered charity, confirming that it provided a prospective party with support in relation to that person’s needs as a victim, or a person at risk, of domestic violence
         da_service_refuge_refusal: A letter or report from an organisation providing domestic violence support services in the UK confirming that a person with whom a prospective party is or was in a family relationship was refused admission to a refuge, the date on which they were refused admission to the refuge, and they sought admission to the refuge because of allegations of domestic violence by the prospective party
-        right_to_remain: You or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic violence or abuse
-        financial_abuse: You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
-        domestic_none: *none_selected
+        misc_right_to_remain: You or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic violence or abuse
+        misc_financial_abuse: You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
+        misc_domestic_none: *none_selected
 
     miam_exemptions_protection:
       question: Child protection concerns
       answers:
-        authority_enquiring: A local authority is carrying out enquiries or assessment about any of the children in this application, or other child in the household
-        authority_protection_order: Any of the children in this application, or other child in the household, is the subject of a child protection plan
-        protection_none: *none_selected
+        misc_authority_enquiring: A local authority is carrying out enquiries or assessment about any of the children in this application, or other child in the household
+        misc_authority_protection_order: Any of the children in this application, or other child in the household, is the subject of a child protection plan
+        misc_protection_none: *none_selected
 
     miam_exemptions_urgency:
       question: Urgency reasons
       answers:
-        risk_applicant: There is risk to the life, liberty or physical safety of you, your family or your home
-        unreasonable_hardship: Any delay caused by attending a MIAM would cause unreasonable hardship for you
-        risk_children: Any delay caused by attending a MIAM would cause a risk of harm to the children
-        risk_unlawful_removal_retention: Any delay caused by attending a MIAM would cause a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales
-        miscarriage_justice: Any delay caused by attending a MIAM would cause a significant risk of a miscarriage of justice
-        irretrievable_problems: Any delay caused by attending a MIAM would cause irretrievable problems in dealing with the dispute (including the irretrievable loss of significant evidence)
-        international_proceedings: There is a significant risk that in the period necessary to schedule and attend a MIAM, proceedings relating to the dispute will be brought in another state in which a valid claim to jurisdiction may exist, such that a court in that other State would be seized of the dispute before a court in England and Wales
-        urgency_none: *none_selected
+        misc_risk_applicant: There is risk to the life, liberty or physical safety of you, your family or your home
+        misc_unreasonable_hardship: Any delay caused by attending a MIAM would cause unreasonable hardship for you
+        misc_risk_children: Any delay caused by attending a MIAM would cause a risk of harm to the children
+        misc_risk_unlawful_removal_retention: Any delay caused by attending a MIAM would cause a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales
+        misc_miscarriage_justice: Any delay caused by attending a MIAM would cause a significant risk of a miscarriage of justice
+        misc_irretrievable_problems: Any delay caused by attending a MIAM would cause irretrievable problems in dealing with the dispute (including the irretrievable loss of significant evidence)
+        misc_international_proceedings: There is a significant risk that in the period necessary to schedule and attend a MIAM, proceedings relating to the dispute will be brought in another state in which a valid claim to jurisdiction may exist, such that a court in that other State would be seized of the dispute before a court in England and Wales
+        misc_urgency_none: *none_selected
 
     miam_exemptions_adr:
       question: Previous MIAM attendance or MIAM exemption
       answers:
-        previous_attendance: In the 4 months prior to making the application, the person attended a MIAM or participated in another form of non-court dispute resolution relating to the same or a very similar dispute
-        ongoing_attendance: At the time of making the application, the person is participating in another form of non-court dispute resolution relating to the same or substantially the same dispute
-        existing_proceedings_attendance: The application would be made in existing proceedings which are continuing and the prospective applicant attended a MIAM before initiating those proceedings
-        previous_exemption: In the 4 months prior to making the application, the person filed a relevant family application confirming that a MIAM exemption applied and that application related to the same or substantially the same dispute
-        existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and a MIAM exemption applied to the application for those proceedings
-        adr_none: *none_selected
+        misc_previous_attendance: In the 4 months prior to making the application, the person attended a MIAM or participated in another form of non-court dispute resolution relating to the same or a very similar dispute
+        misc_ongoing_attendance: At the time of making the application, the person is participating in another form of non-court dispute resolution relating to the same or substantially the same dispute
+        misc_existing_proceedings_attendance: The application would be made in existing proceedings which are continuing and the prospective applicant attended a MIAM before initiating those proceedings
+        misc_previous_exemption: In the 4 months prior to making the application, the person filed a relevant family application confirming that a MIAM exemption applied and that application related to the same or substantially the same dispute
+        misc_existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and a MIAM exemption applied to the application for those proceedings
+        misc_adr_none: *none_selected
 
     miam_exemptions_misc:
       question: Other exemptions
       answers:
-        no_respondent_address: You don’t have sufficient contact details for the other people in this application (the respondents)
-        without_notice: You’re applying for a without notice hearing
-        no_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
-        no_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
-        no_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
-        access_prohibited: You or any of the other people in this application (the respondents) are in prison or any other institution, subject to bail conditions that prevent contact with each other or subject to a licence that prohibits contact with each other
-        non_resident: You or the other people in this application (the respondents) don’t live in England and Wales
-        applicant_under_age: The applicant or any of the other people in this application (the respondents) are under 18 years old
+        misc_no_respondent_address: You don’t have sufficient contact details for the other people in this application (the respondents)
+        misc_without_notice: You’re applying for a without notice hearing
+        miam_access_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
+        miam_access_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
+        miam_access_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
+        misc_access_prohibited: You or any of the other people in this application (the respondents) are in prison or any other institution, subject to bail conditions that prevent contact with each other or subject to a licence that prohibits contact with each other
+        misc_non_resident: You or the other people in this application (the respondents) don’t live in England and Wales
+        misc_applicant_under_age: The applicant or any of the other people in this application (the respondents) are under 18 years old
         misc_none: *none_selected
 
     ### Safety concerns ###
