--- a/config/locales/exemptions/en.yml
+++ b/config/locales/exemptions/en.yml
@@ -35,47 +35,47 @@ en:
       da_service_organisation: A letter from an organisation providing domestic violence support services, or a registered charity
       da_service_refuge_refusal: A letter or report from an organisation providing domestic violence support services in the United Kingdom
       ## RIGHT TO REMAIN ##
-      right_to_remain: You or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic violence or abuse
+      misc_right_to_remain: You or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic violence or abuse
       ## FINANCIAL ABUSE ##
-      financial_abuse: You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
+      misc_financial_abuse: You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
       ## DOMESTIC NONE ##
-      domestic_none: *none_of_these
+      misc_domestic_none: *none_of_these
 
     PROTECTION_EXEMPTIONS: &PROTECTION_EXEMPTIONS
-      authority_enquiring: A local authority is carrying out enquiries or assessment about any of the children in this application, or other child in the household
-      authority_protection_order: Any of the children in this application, or other child in the household, is the subject of a child protection plan
-      protection_none: *none_of_these
+      misc_authority_enquiring: A local authority is carrying out enquiries or assessment about any of the children in this application, or other child in the household
+      misc_authority_protection_order: Any of the children in this application, or other child in the household, is the subject of a child protection plan
+      misc_protection_none: *none_of_these
 
     URGENCY_EXEMPTIONS: &URGENCY_EXEMPTIONS
-      risk_applicant: There is risk to the life, liberty or physical safety of you, your family or your home
-      unreasonable_hardship: Any delay caused by attending a MIAM would cause unreasonable hardship for you
-      risk_children: Any delay caused by attending a MIAM would cause a risk of harm to the children
-      risk_unlawful_removal_retention: Any delay caused by attending a MIAM would cause a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales
-      miscarriage_justice: Any delay caused by attending a MIAM would cause a significant risk of a miscarriage of justice
-      irretrievable_problems: Any delay caused by attending a MIAM would cause irretrievable problems in dealing with the dispute (including the irretrievable loss of significant evidence)
-      international_proceedings: There is a significant risk that in the period necessary to schedule and attend a MIAM, proceedings relating to the dispute will be brought in another state in which a valid claim to jurisdiction may exist, such that a court in that other State would be seized of the dispute before a court in England and Wales
-      urgency_none: *none_of_these
+      misc_risk_applicant: There is risk to the life, liberty or physical safety of you, your family or your home
+      misc_unreasonable_hardship: Any delay caused by attending a MIAM would cause unreasonable hardship for you
+      misc_risk_children: Any delay caused by attending a MIAM would cause a risk of harm to the children
+      misc_risk_unlawful_removal_retention: Any delay caused by attending a MIAM would cause a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales
+      misc_miscarriage_justice: Any delay caused by attending a MIAM would cause a significant risk of a miscarriage of justice
+      misc_irretrievable_problems: Any delay caused by attending a MIAM would cause irretrievable problems in dealing with the dispute (including the irretrievable loss of significant evidence)
+      misc_international_proceedings: There is a significant risk that in the period necessary to schedule and attend a MIAM, proceedings relating to the dispute will be brought in another state in which a valid claim to jurisdiction may exist, such that a court in that other State would be seized of the dispute before a court in England and Wales
+      misc_urgency_none: *none_of_these
 
     ADR_EXEMPTIONS: &ADR_EXEMPTIONS
-      previous_attendance: In the 4 months prior to making the application, you attended a MIAM or participated in another form of non-court dispute resolution relating to the same or substantially the same dispute
-      ongoing_attendance: At the time of making the application, you are participating in another form of non-court dispute resolution relating to the same or substantially the same dispute
-      existing_proceedings_attendance: The application would be made in existing proceedings which are continuing and you attended a MIAM before initiating those proceedings
-      previous_exemption: In the 4 months prior to making the application, you filed a relevant family application confirming that a MIAM exemption applied and that application related to the same or substantially the same dispute
-      existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and a MIAM exemption applied to the application for those proceedings
-      adr_none: *none_of_these
+      misc_previous_attendance: In the 4 months prior to making the application, you attended a MIAM or participated in another form of non-court dispute resolution relating to the same or substantially the same dispute
+      misc_ongoing_attendance: At the time of making the application, you are participating in another form of non-court dispute resolution relating to the same or substantially the same dispute
+      misc_existing_proceedings_attendance: The application would be made in existing proceedings which are continuing and you attended a MIAM before initiating those proceedings
+      misc_previous_exemption: In the 4 months prior to making the application, you filed a relevant family application confirming that a MIAM exemption applied and that application related to the same or substantially the same dispute
+      misc_existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and a MIAM exemption applied to the application for those proceedings
+      misc_adr_none: *none_of_these
 
     MISC_EXEMPTIONS: &MISC_EXEMPTIONS
-      no_respondent_address: You don’t have sufficient contact details for the other people in this application (the respondents) to enable a family mediator to contact any of them for the purpose of scheduling the MIAM
-      without_notice: You’re applying for a without notice hearing
+      misc_no_respondent_address: You don’t have sufficient contact details for the other people in this application (the respondents) to enable a family mediator to contact any of them for the purpose of scheduling the MIAM
+      misc_without_notice: You’re applying for a without notice hearing
       ## GROUP MIAM ACCESS ##
       group_miam_access: You can’t access a mediator
-      no_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
-      no_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
-      no_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
+      miam_access_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
+      miam_access_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
+      miam_access_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
       ## END GROUP ##
-      access_prohibited: You or all of the prospective respondents can’t attend a MIAM because one of you is in prison or any other institution; subject to bail conditions that prevent contact with each other; or subject to a licence with a prohibited contact with each other
-      non_resident: You or all of the prospective respondents are not habitually resident in England and Wales
-      applicant_under_age: You or the prospective respondents are under 18 years old
+      misc_access_prohibited: You or all of the prospective respondents can’t attend a MIAM because one of you is in prison or any other institution; subject to bail conditions that prevent contact with each other; or subject to a licence with a prohibited contact with each other
+      misc_non_resident: You or all of the prospective respondents are not habitually resident in England and Wales
+      misc_applicant_under_age: You or the prospective respondents are under 18 years old
       ## MISC NONE ##
       misc_none: *none_of_these
 
@@ -86,8 +86,8 @@ en:
       group_specialist: For example, a health professional or specialist has confirmed injuries that are or were a result of domestic violence or abuse
       group_local_authority: For example, a local authority or housing association has confirmed there is or has been a risk of domestic violence or abuse
       group_da_service: For example, an independent domestic violence or abuse adviser has confirmed support to you or the other people in this application (the respondents)
-      right_to_remain: A letter from the Home Office will have confirmed that the leave was granted under paragraph 289B of the Immigration Rules
-      financial_abuse_html: |
+      misc_right_to_remain: A letter from the Home Office will have confirmed that the leave was granted under paragraph 289B of the Immigration Rules
+      misc_financial_abuse_html: |
         Financial abuse is a way of controlling someone being able to earn, spend or keep their own money. For example, preventing someone going to work, withholding money, or putting debts in someone else’s name. Evidence could include:
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-!-margin-top-2">
           <li>a copy of a credit card account, loan document or bank statements</li>
@@ -143,19 +143,19 @@ en:
     MISC_EXEMPTIONS_HINTS: &MISC_EXEMPTIONS_HINTS
       without_notice: Hearings which take place without notice to the other people will only be justified where your case is exceptionally urgent or there is good reason not to tell the other people about your application (either because they could take steps to obstruct the application or because doing so may expose you or the children to a risk of harm)
       group_miam_access: For example you live further than 15 miles from a mediator, you are not able to get an appointment for a MIAM within 15 working days or you or the other people in this application (the respondents) have a disability and the mediator doesn’t have disabled facilities
-      no_disabled_facilities_html: |
+      miam_access_disabled_facilites_html: |
         You will need to provide:
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-!-margin-top-2">
           <li>evidence you’ve contacted 3 mediators who all state they don’t have disabled facilities</li>
           <li>names and contact details of the mediators, including dates of contact</li>
         </ul>
-      no_appointment_html: |
+      miam_access_appointment_html: |
         You will need to provide:
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-!-margin-top-2">
           <li>evidence you’ve contacted 3 mediators who all state they can’t offer an appointment within 15 days</li>
           <li>names and contact details of the mediators, including dates of contact</li>
         </ul>
-      non_resident: This may include working, owning property, having children in school or if family life mainly takes place outside England or Wales
+      misc_non_resident: This may include working, owning property, having children in school or if family life mainly takes place outside England or Wales
 
   helpers:
     label:
