--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1025,6 +1025,22 @@ en:
         edit:
           page_title: Application kind
           lead_text: You can apply to court for the following orders.
+      consent_order_upload:
+        edit:
+          page_title: Upload the draft of your consent order
+          lead_text_html: |
+            <p>The draft of the consent order must be signed by you (the applicant) and the other person (respondent).</p>
+            <p>If you are uploading documents from a computer, name the files clearly. For example, consent order draft.pdf</p>
+            <p>Files must end with JPG, BMP, PNG, TIF, PDF, DOC or DOCX</p>
+          dropdown_header: How to take a picture of a document on your phone and upload it
+          dropdown_content_html: |
+            <ol>
+              <li>Place your document on a flat service in a well-lit room. Use a flash if you need to.</li>
+              <li>Take a picture of the whole document. You should be able to see its edges.</li>
+              <li>Check you can read all the writing, including the handwriting.</li>
+              <li>Email or send the photo or scan to the device you are using now.</li>
+              <li>Upload it here.</li>
+            </ol>
       child_protection_cases:
         edit:
           page_title: Child protection cases
