--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -71,6 +71,11 @@ en:
       blank: Enter an answer
       present: Leave empty
       inclusion: Select an option
+      file_size: File too big
+      content_type: Unsupported file type
+      invalid_characters: Invalid file name
+      response_error: Response error
+      virus_detected: Virus detected
     error_summary:
       heading: There is a problem on this page
     page_title_prefix: 'Error: '
@@ -125,6 +130,15 @@ en:
           attributes:
             consent_order:
               inclusion: Select what kind of application you want to make
+        steps/opening/consent_order_upload_form:
+          attributes:
+            draft_consent_order_document:
+              file_size: File too big
+              content_type: Unsupported file type
+              invalid_characters: Invalid file name
+              response_error: Response error
+              virus_detected: Virus detected
+              blank: You must choose a file to upload
         steps/opening/research_consent_form:
           attributes:
             research_consent:
