--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1119,6 +1119,10 @@ en:
       heading: Sorry, this application no longer exists
       lead_text: If you copied a web address, please check it’s correct.
       more_text: "Please note: a draft application expires %{expire_in_days} days after it was created, and is automatically removed from the service."
+    file_not_found:
+      page_title: File not found
+      heading: Sorry, this file no longer exists
+      lead_text: If you copied a web address, please check it’s correct.
     application_screening:
       page_title: Application not ready
       heading: You haven’t entered a postcode
