--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1601,13 +1601,8 @@ en:
         research_consent: Your insights will help us improve the service.
       steps_opening_consent_order_form:
         consent_order_options:
-          'no': This includes deciding who the children live with and where; stopping someone doing something; and
-          resolving a specific matter
-          'yes_html': <p class='govuk-hint'>This includes deciding who the children live with and where; stopping
-          someone doing something; and resolving a specific matter.</p><p class='govuk-hint'> This makes a written
-          agreement legally binding; it must be signed by you (the applicant) and the other person (respondent). If you
-          select this option, you must have a scan, photo or electronic copy of the draft consent order signed by the
-          respondent which you are able to upload to this application.</p>
+          'no': This includes deciding who the children live with and where; stopping someone doing something; and resolving a specific matter
+          'yes_html': <p class='govuk-hint'>This includes deciding who the children live with and where; stopping someone doing something; and resolving a specific matter.</p><p class='govuk-hint'> This makes a written agreement legally binding; it must be signed by you (the applicant) and the other person (respondent). If you select this option, you must have a scan, photo or electronic copy of the draft consent order signed by the respondent which you are able to upload to this application.</p>
       steps_miam_certification_date_form:
         miam_certification_date: For example, 31 3 2020
       steps_application_court_proceedings_form:
