--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -662,6 +662,24 @@ en:
           page_title: MIAM exemption claim
           lead_text_html: If you’re unsure you can <a href="/about/miam_exemptions" class="govuk-link" target="_blank">check the list of valid reasons</a>.
           info_notice: If you're claiming that you do not have to attend a MIAM before making this application, you may need to provide evidence in support of this.
+      certification_upload:
+        edit:
+          page_title: Upload your MIAM certificate
+          lead_text_html: |
+            <p>If you are uploading documents from a computer, name the files clearly. For example, miam-certificate.pdf</p>
+            <p>Files must end with JPG, BMP, PNG, TIF, PDF, DOC or DOCX</p>
+          dropdown_header: How to take a picture of a document on your phone and upload it
+          dropdown_content_html: |
+            <ol>
+              <li>Place your document on a flat service in a well-lit room. Use a flash if you need to.</li>
+              <li>Take a picture of the whole document. You should be able to see its edges.</li>
+              <li>Check you can read all the writing, including the handwriting.</li>
+              <li>Email or send the photo or scan to the device you are using now.</li>
+              <li>Upload it here.</li>
+            </ol>
+          attach_document_html: "<strong>Select document to upload</strong>"
+          upload_explanation_html: |
+            <p class="govuk-body">Your document will upload when you click 'Continue'.</p>
       certification:
         edit:
           page_title: MIAM certification
