--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -168,7 +168,7 @@ en:
       applicants_details_index_title: Applicant %{index}
       respondents_details_index_title: Respondent %{index}
       other_parties_details_index_title: Person %{index}
-      hmcts_instructions: "[Document to be provided at first court hearing]"
+      hmcts_instructions: "[MIAM document has been emailed to the court]"
       ### C8 ###
       c8_applicants_details_index_title: Applicant %{index}
       c8_other_parties_details_index_title: Person %{index}
